--- a/slides.html
+++ b/slides.html
@@ -266,7 +266,17 @@ class: middle, left
 
 # What is this radare2 thing?
 
-### It's like vim in Dwarf Fortress, right?
+```
+[0x00004730]> ?E It's like vim in Dwarf Fortress, right?
+ ╭──╮    ╭─────────────────────────────────────────╮
+ │ _│    │                                         │
+ │ O O  <  It's like vim in Dwarf Fortress, right? │
+ │  │╭   │                                         │
+ ││ ││   ╰─────────────────────────────────────────╯
+ │└─┘│
+ ╰───╯
+[0x00004730]> 
+```
 
 ---
 class: middle, left
@@ -293,7 +303,17 @@ class: middle, left
 
 # How do I radare2?
 
-### What do you mean "command line"?!
+```
+[0x00004730]> ?E What do you mean, "command line"?!
+ ╭──╮    ╭────────────────────────────────────╮
+ │ _│    │                                    │
+ │ O O  <  What do you mean, "command line"?! │
+ │  │╭   │                                    │
+ ││ ││   ╰────────────────────────────────────╯
+ │└─┘│
+ ╰───╯
+[0x00004730]>
+```
 
 ---
 class: middle, left
@@ -537,7 +557,17 @@ print(r2.cmdj('pdfj'))
 
 # So far so good?
 
-## Questions?
+```
+[0x00004730]> ?E Questions?
+ ╭──╮    ╭────────────╮
+ │ _│_   │            │
+ │ O O  <  Questions? │
+ │  │╷   │            │
+ │  ││   ╰────────────╯
+ │ ─╯│
+ ╰───╯
+[0x00004730]>
+```
 
 ---
 
@@ -959,7 +989,17 @@ class: middle, left
 
 # How can I get r2 swag?
 
-### How much did you say for the radare2 plumbus?
+```
+[0x00004730]> ?E How much did you say for the radare2 plumbus?
+ ╭──╮    ╭───────────────────────────────────────────────╮
+ │ _│    │                                               │
+ │ O O  <  How much did you say for the radare2 plumbus? │
+ │  │╭   │                                               │
+ ││ ││   ╰───────────────────────────────────────────────╯
+ │└─┘│
+ ╰───╯
+[0x00004730]>
+```
 
 ---
 class: middle, left
@@ -973,7 +1013,7 @@ Two crackmes:
 
 Your choice ;)
 
-We'll trade the _amazing_ r2flag for a short presentation of your solution :)
+We'll trade an _amazing_ r2flag for a short presentation of your solution :)
 
 ---
 class: middle, left
@@ -994,12 +1034,17 @@ class: middle, left
 - All the r2 contributors
 - You all, for attenting our workshop ♥
 
-Now go score some flags at the CTF!
-
----
-background-position: center;
-background-size: contain;
-background-image: url(clippy.png)
+```
+[0x00004730]> ?E Now go score some flags at the CTF!
+ ╭──╮    ╭─────────────────────────────────────╮
+ │ _│_   │                                     │
+ │ O O  <  Now go score some flags at the CTF! │
+ │  │╷   │                                     │
+ │  ││   ╰─────────────────────────────────────╯
+ │ ─╯│
+ ╰───╯
+[0x00004730]> 
+```
 
    </textarea>
     <script src="./remark-latest.min.js"></script>
