--- a/slides.html
+++ b/slides.html
@@ -597,9 +597,19 @@ dump_fun('main')
 ---
 
 
-# How do I impress my CTF 🏴 pals with it?
+# How do I impress my CTF `🏴` pals with it?
 
-### Excellent, we can attack in any direction!
+```
+[0x00000000]> ?E Excellent, we can attack in any directions
+ ╭──╮    ╭────────────────────────────────────────────╮
+ │ _│    │                                            │
+ │ O O  <  Excellent, we can attack in any directions │
+ │  │╭   │                                            │
+ ││ ││   ╰────────────────────────────────────────────╯
+ │└─┘│
+ ╰───╯
+[0x00000000]>
+```
 
 ---
 class: middle, left
